# AClaw

./: .env.example  .gitignore  NOTES.md  README.md  pyproject.toml  requirements.txt
.claw/: config.json
.claw/memory/: preferences.md  user.md
.claw/memory/users/default/: user.md
.claw/prompts/: system.en.md  system.zh.md
.claw/prompts/fragments/: memory_block.md  skills_block.md  tool_result.md
.claw/skills/: commit.md  review.md  summarize.md
backend/: requirements.txt
backend/app/: __init__.py  config.py  main.py  schema.py
backend/app/api/: claw.py  memory.py  skills.py
backend/app/core/: __init__.py
backend/app/core/agent/: claw_agent.py  context.py  output.py  subagent.py
backend/app/core/cot/: __init__.py  recorder.py
backend/app/core/hooks/: __init__.py  callback.py  (+2 more)
backend/app/services/: llm.py  stt.py  tts.py
frontend/: electron.vite.config.ts  package-lock.json  package.json
frontend/src/main/: backend.ts  index.ts
frontend/src/preload/: index.ts
frontend/src/renderer/: App.tsx  global.d.ts  index.html
scripts/: dev.sh
src/agent/: __init__.py
src/agent/config/: __init__.py  settings.py
src/agent/core/: agent.py
src/agent/tools/: __init__.py  file_edit.py  file_write.py  glob.py
src/agent/utils/: __init__.py  logger.py
src/claw/: __init__.py
src/claw/config/: __init__.py  settings.py
src/claw/core/: __init__.py  agent.py  client.py  memory.py
src/claw/tools/: __init__.py  bash.py  config.py  file_edit.py  file_read.py  file_write.py  glob.py  grep.py  todo_write.py
src/claw/utils/: __init__.py  logger.py
(+34 files in other folders)
